--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,9 @@
     "bootstrap": "^3.3.6",
     "angular": "^1.5.2",
     "angular-resource": "^1.5.2"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.2",
+    "angular-route": "^1.5.2"
   }
 }
