--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs": "^2.1.3",
-    "phantomjs-prebuilt": "^2.1.6"
+    "phantomjs-prebuilt": "^2.1.6",
+    "protractor": "^3.2.1"
+  },
+  "dependencies": {
+    "http-server": "^0.9.0"
   }
 }
