--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,14 @@
     "jquery": "^2.2.2",
     "bootstrap": "^3.3.6",
     "angular": "^1.5.2",
-    "angular-resource": "^1.5.2"
+    "angular-resource": "^1.5.2",
+    "ng-token-auth": "^0.0.28"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.2",
     "angular-route": "^1.5.2"
+  },
+  "resolutions": {
+    "angular": "^1.5.2"
   }
 }
