--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular": "^1.5.2",
     "angular-resource": "^1.5.2",
     "ng-token-auth": "^0.0.28",
-    "angular-cookie": "^4.1.0"
+    "angular-cookie": "^4.1.0",
+    "angular-cookies": "^1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.2",
