--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/HannSO/sos-fixit-angular#readme",
   "devDependencies": {
+    "database-cleaner": "^0.13.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.22",
