--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,9 @@
   "devDependencies": {
     "angular-mocks": "^1.5.2",
     "angular-route": "^1.5.2"
+  },
+  "resolutions": {
+    "angular-cookie": "^4.1.0",
+    "angular": "^1.5.2"
   }
 }
